--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,16 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true 
 
 
+# Logging Level
+logging.level.com.infy.service=ERROR
+logging.level.com.infy=INFO
+# Logging pattern for the console
+logging.pattern.console=%d{yyyy-MMM-dd HH:mm:ss a} [%t] %-5level %logger{36} - %msg%n
+# Logging pattern for file
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+# Logging File
+logging.file.name=log/ErrorLog.log
+
 Controller.INSERT_SUCCESS=Successfully added the schedules
 Controller.DELETE_SUCCESS=Successfully deleted
 Service.INVALID_EMPLOYEE_ID=Please enter a valid employee ID.
